--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1043,7 +1043,7 @@ if (WITH_TESTS)
         target_link_libraries(${exename}${ARTIFACT_SUFFIX} gtest ${LIBS})
         if("${exename}" MATCHES "db_bench")
             link_directories(/usr/local/lib)
-            target_link_libraries(${exename}${ARTIFACT_SUFFIX} cityhash)
+            target_link_libraries(${exename}${ARTIFACT_SUFFIX} cityhash ${LIBS})
             include_directories(/usr/local/include ${LIBPMEMOBJ++_INCLUDE_DIRS})
         endif()
     endforeach (sourcefile ${BENCHMARKS})
