--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -703,7 +703,7 @@ set(SOURCES
         utilities/nvm_write_cache/persistent_chunk.cc
         utilities/nvm_write_cache/persistent_chunk_iterator.cc
         #utilities/nvm_write_cache/skiplist/persistentptr_test.cc
-        utilities/nvm_write_cache/range_tab_test.cc
+        #utilities/nvm_write_cache/range_tab_test.cc
         utilities/nvm_write_cache/nv_range_tab.cc
         utilities/nvm_write_cache/persistent_bitmap.cc
         $<TARGET_OBJECTS:build_version>)
