--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -762,10 +762,10 @@ if (WIN32)
     set(SYSTEM_LIBS ${SYSTEM_LIBS} Shlwapi.lib Rpcrt4.lib)
     set(LIBS ${ROCKSDB_STATIC_LIB} ${THIRDPARTY_LIBS} ${SYSTEM_LIBS})
 else ()
-    #message(STATUS "ENV{PKG_CONFIG_PATH}: " $ENV{PKG_CONFIG_PATH})
+    message(STATUS "ENV{PKG_CONFIG_PATH}: " $ENV{PKG_CONFIG_PATH})
     set(ENV{PKG_CONFIG_PATH} $ENV{PKG_CONFIG_PATH} /lib64/pkgconfig) #
     set(ENV{PKG_CONFIG_PATH} $ENV{PKG_CONFIG_PATH}:/usr/local/lib64/pkgconfig)
-    #message(STATUS "after set: " $ENV{PKG_CONFIG_PATH})
+    message(STATUS "after set: " $ENV{PKG_CONFIG_PATH})
     find_package(PkgConfig QUIET)
     if(PKG_CONFIG_FOUND)
         pkg_check_modules(LIBPMEMOBJ++ REQUIRED libpmemobj++)
