--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ endif ()
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/modules/")
 
 option(WITH_JEMALLOC "build with JeMalloc" OFF)
-option(WITH_SNAPPY "build with SNAPPY" OFF)
+option(WITH_SNAPPY "build with SNAPPY" ON)
 option(WITH_LZ4 "build with lz4" OFF)
 option(WITH_ZLIB "build with zlib" OFF)
 option(WITH_ZSTD "build with zstd" OFF)
@@ -83,8 +83,6 @@ else ()
             list(APPEND THIRDPARTY_LIBS ${gflags_LIBRARIES})
         endif ()
     endif ()
-
-        message("with snappy")
     if (WITH_SNAPPY)
         find_package(snappy REQUIRED)
         add_definitions(-DSNAPPY)
