THIRDPARTY_LIBS cityhash

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,6 +118,7 @@ else ()
         include_directories(${ZSTD_INCLUDE_DIR})
         list(APPEND THIRDPARTY_LIBS ${ZSTD_LIBRARIES})
     endif ()
+    list(APPEND THIRDPARTY_LIBS cityhash)
 endif ()
 
 string(TIMESTAMP GIT_DATE_TIME "%Y/%m/%d %H:%M:%S" UTC)
@@ -1047,7 +1048,7 @@ if (WITH_TESTS)
         if("${exename}" MATCHES "db_bench")
             link_directories(/usr/local/lib)
             include_directories(/usr/local/include ${LIBPMEMOBJ++_INCLUDE_DIRS})
-            target_link_libraries(${exename}${ARTIFACT_SUFFIX} cityhash)
+            # target_link_libraries(${exename}${ARTIFACT_SUFFIX} cityhash)
         endif()
     endforeach (sourcefile ${BENCHMARKS})
 
